--- a/index.html
+++ b/index.html
@@ -107,28 +107,25 @@
 
                 <div class="responsive">
                     <div class="gallery">
-                        <a href="mailto:rubymasciangelo@gmail.com" target="_blank">
-                            <img class="mail" src="image/mail_icon.png" alt="Gmail" width="100" height="200" />
+                        <a href="https://u.cubeupload.com/an_wired_dude/pac.png">
+                            <img class="fb" src="images/facebook.png" alt="facebook" width="150"/>
                         </a>
-                        <div class="description">Email</div>
+                    </div>
+                </div>
+
+                <div class="responsive">
+                    <div class="gallery"> 
+                        <a href="https://www.youtube.com/channel/UCB27PcsbXlrHVYHa6Rv02bQ/featured" target="_blank">
+                            <img class="youtube" src="images/youtube.png" alt="youtube" width="150"/>
+                        </a>
                     </div>
                 </div>
 
                 <div class="responsive">
                     <div class="gallery">
-                        <a href="https://github.com/rubymasciangelo" target="_blank">
-                            <img class="github" src="image/github_icon.png" alt="Github" width="100" height="200" />
+                        <a href="https://www.instagram.com/luckywelive.high/" target="_blank">
+                            <img class="instagram" src="images/instagram.png" alt="instagram" width="150"/>
                         </a>
-                        <div class="description">GitHub</div>
-                    </div>
-                </div>
-
-                <div class="responsive">
-                    <div class="gallery">
-                        <a href="https://www.linkedin.com/in/ruby-masciangelo/" target="_blank">
-                            <img class="linkdin" src="image/linkd_icon.png" alt="LinkedIn" width="100" height="200" />
-                        </a>
-                        <div class="description">LinkedIn</div>
                     </div>
                 </div>
 
