--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <!-- END HOME -->
         <!-- DRIP DROP -->
-        <section id="drop">
+        <section id="drop" class="drop">
             <div class="container">
                 <h1>SS20</h1>
                 <div class="gallery-container">
@@ -104,7 +104,7 @@
         <section id="contact">
             <div class="container">
                 <h2>LUCKY WE HAVE SOCIAL MEDIA</h2>
-
+                <div class="media">
                 <div class="responsive">
                     <div class="gallery">
                         <a href="https://u.cubeupload.com/an_wired_dude/pac.png">
@@ -128,7 +128,7 @@
                         </a>
                     </div>
                 </div>
-
+            </div>
             </div>
         </section>
         <!-- END CONTACT -->
