--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <section id="drop" class="drop">
             <div class="container">
                 <h1>SS20</h1>
-                <div class="gallery-container">
+                <div class="doll-container">
                     <div class="responsive">
                         <div class="gallery">
                             <div class="doll-one">
