--- a/index.html
+++ b/index.html
@@ -104,10 +104,9 @@
         <section id="contact">
             <div class="container">
                 <h2>LUCKY WE HAVE SOCIAL MEDIA</h2>
-                <div class="media">
                 <div class="responsive">
                     <div class="gallery">
-                        <a href="https://u.cubeupload.com/an_wired_dude/pac.png">
+                        <a href="https://u.cubeupload.com/an_wired_dude/pac.png" class="social-media" target="_blank">
                             <img class="fb" src="images/facebook.png" alt="facebook" width="150"/>
                         </a>
                     </div>
@@ -115,7 +114,7 @@
 
                 <div class="responsive">
                     <div class="gallery"> 
-                        <a href="https://www.youtube.com/channel/UCB27PcsbXlrHVYHa6Rv02bQ/featured" target="_blank">
+                        <a href="https://www.youtube.com/channel/UCB27PcsbXlrHVYHa6Rv02bQ/featured" class="social-media" target="_blank">
                             <img class="youtube" src="images/youtube.png" alt="youtube" width="150"/>
                         </a>
                     </div>
@@ -123,12 +122,11 @@
 
                 <div class="responsive">
                     <div class="gallery">
-                        <a href="https://www.instagram.com/luckywelive.high/" target="_blank">
+                        <a href="https://www.instagram.com/luckywelive.high/" class="social-media" target="_blank">
                             <img class="instagram" src="images/instagram.png" alt="instagram" width="150"/>
                         </a>
                     </div>
                 </div>
-            </div>
             </div>
         </section>
         <!-- END CONTACT -->
