--- a/index.html
+++ b/index.html
@@ -36,33 +36,35 @@
         <section id="drop" class="drop">
             <div class="container">
                 <h1>SS20</h1>
-                    <div class="responsive">
+            </div>
+                <div class="doll-container">
+                    <div class="responsive" id="doll-one">
                         <div class="gallery">
                             <div class="doll-one">
                                 <img class="frog" src="images/frog.png" alt="frog"/>
+                                <div class="description">Plasma Aloha</div>
                             </div>
-                            <div class="description">Plasma Aloha</div>
                         </div>
                     </div>
 
-                    <div class="responsive">
+                    <div class="responsive" id="doll-two">
                         <div class="gallery">
                             <div class="doll-two">
                                 <img class="dennis" src="images/dennis.png" alt="dennis"/>
+                                <div class="description">Plasma Aloha</div>
                             </div>
-                            <div class="description">Plasma Aloha</div>
                         </div>
                     </div>
 
-                    <div class="responsive">
+                    <div class="responsive" id="doll-three">
                         <div class="gallery">
                             <div class="doll-three">
-                                <img class="dan" src="images/dan.png" alt="dan"/>
+                                <img class="dan" src="images/teen.png" alt="dan"/>
+                                <div class="description">Plasma Aloha</div>
                             </div>
-                            <div class="description">Plasma Aloha</div>
                         </div>
                     </div>
-
+                
             </div>
         </section>
         <!-- END DROP -->
