mobile contact sizing altered

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <div class="responsive">
                     <div class="gallery">
                         <a href="https://u.cubeupload.com/an_wired_dude/pac.png" class="social-media" target="_blank">
-                            <img class="fb" src="images/facebook.png" alt="facebook" width="150"/>
+                            <img class="fb" src="images/facebook.png" alt="facebook" width="150" height="150"/>
                         </a>
                     </div>
                 </div>
@@ -115,7 +115,7 @@
                 <div class="responsive">
                     <div class="gallery"> 
                         <a href="https://www.youtube.com/channel/UCB27PcsbXlrHVYHa6Rv02bQ/featured" class="social-media" target="_blank">
-                            <img class="youtube" src="images/youtube.png" alt="youtube" width="150"/>
+                            <img class="youtube" src="images/youtube.png" alt="youtube" width="150" height="150"/>
                         </a>
                     </div>
                 </div>
@@ -123,7 +123,7 @@
                 <div class="responsive">
                     <div class="gallery">
                         <a href="https://www.instagram.com/luckywelive.high/" class="social-media" target="_blank">
-                            <img class="instagram" src="images/instagram.png" alt="instagram" width="150"/>
+                            <img class="instagram" src="images/instagram.png" alt="instagram" width="150" height="150"/>
                         </a>
                     </div>
                 </div>
